# llm-benchmark-runner

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  askama.toml  benchmark_runner.py  build.rs  deny.toml  manage_llama_swap_models.py  models_config.yaml  report_generator.py  requirements.txt  test_config.yaml  test_edge_case_config.yaml  test_macro_config.yaml  test_results_edge.json
.github/workflows/: build.yml  docker.yml
benchmarks/: __init__.py  kld.py  mmlu.py  mmlu_pro.py  perplexity.py
data/: generate_cached_logits.py  mymodel_base_toplogprobs.json
data/wikitext-2-raw/: wiki.test.raw
docker/swebench-harness/: Dockerfile
plans/: EVALUATION_OF_BENCHMARKS.md  add-more-benchmarks.md  categories.md  comparison-reports.md  report-generators-and-generic-results.md
src/: client.rs  config.rs  docker_runner.rs  download.rs  error_classes.rs  main.rs  report.rs  runner.rs  utils.rs
src/benchmarks/: aime.rs  answer_classifier.rs  carwash.rs  cnn_dailymail.rs  coding_eval.rs  ea_mt.rs  faithdial.rs  fever.rs  gpqa.rs  halueval.rs  harmbench.rs  hdm_bench.rs  ifeval.rs  kld.rs  math500.rs  minebench.rs  mmlu_pro.rs  mmlu_pro_plus.rs  mmlu_prox.rs  mod.rs  nq_open.rs  race.rs  squad_v2.rs  supergpqa.rs  swe_bench.rs  tool_hallucination.rs  triviaqa.rs  true_false.rs  truthful_qa.rs  xsum.rs
src/config/: macro_expansion.rs  mod.rs
src/reports/: categories.rs  console.rs  generator.rs  html.rs  markdown.rs  mod.rs  model.rs
src/reports/html/: filters.rs
src/reports/templates/: atlas_data_uri.txt  official-renderer.js  report-official.html  report.html  voxel-viewer-orbitcontrols.js  voxel-viewer-three.js
src/reports/templates/voxel-renderer/lib/voxel/: types.ts
templates/: report.html
~/workspace/llm-benchmark-runner/: PLAN.md
