[package]
name = "llm-benchmark-runner"
version = "0.1.0"
edition = "2021"
description = "Benchmark runner for LLM models - MMLU-Pro, KLD, etc."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
askama = { version = "0.12", features = ["serde_json"] }
libc = "0.2"  # for process group management (setsid, killpg)
anyhow = "1"
once_cell = "1"
regex = "1"
rand = "0.8"
dirs = "5"
chrono = "0.4"
async-trait = "0.1"  # for async trait methods
csv = "1.3"

[dev-dependencies]
mockall = "0.11"  # for mocking HTTP client in tests
