[package]
name = "llm-benchmark-runner"
version = "0.1.0"
edition = "2021"
description = "Benchmark runner for LLM models - MMLU-Pro, KLD, etc."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
askama = { version = "0.16", features = ["serde_json"] }
libc = "0.2"  # for process group management (setsid, killpg)
anyhow = "1"
bytes = "1"  # for Bytes type used in download utilities
once_cell = "1"
regex = "1"
rand = "0.8"
dirs = "5"
chrono = "0.4"
async-trait = "0.1"  # for async trait methods
csv = "1.3"
flate2 = "1.0"
slug = "0.1"
ctrlc = "3.4"
# No reports subcrate - it's a module under src/reports/

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[features]
renderer-official = [] # requires Node.js on build machine; see README

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dev-dependencies]
mockall = "0.11"  # for mocking HTTP client in tests
tempfile = "3.19"  # for temporary files in tests
mockito = "1.2"  # for blocking HTTP server mocking in tests
